-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.1
-
-
88f5fc47e (dev), 0002ba47e (6.7), db447658b (6.6), 0b222bbbe (tqtc/lts-6.5)
-
Foundations Sprint 98, Foundations Sprint 99
Seems to be Windows specific behavior. It seems to be waiting in event loop and does not process further requests until the first request has finished. After the first request it seems to function normally like on other platforms.
To reproduce, run attached example. It seems to wait 10 seconds (the time the worker thread sleeps) until it starts to handle the next pending connection.